# telegram-stock-summary

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  .railwayignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  factory.py  gemini.py  json_utils.py  mock.py  prompts.py  provider.py
backend/app/analyzer/: __init__.py  service.py
backend/app/api/: dependencies.py  routes.py
backend/app/collector/: __init__.py  service.py
backend/app/config/: logging.py  settings.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/processor/: __init__.py  clustering.py  deduplication.py  entity_extraction.py  normalization.py  pipeline.py  pipeline_types.py  ranking.py
backend/app/repositories/: __init__.py  channels.py  messages.py  reports.py  stocks.py  watchlists.py
backend/app/scheduler/: __init__.py  service.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: __init__.py  report_service.py  watchlist_service.py
backend/app/summarizer/: __init__.py  service.py
backend/app/telegram/: __init__.py  bot.py
backend/app/utils/: __init__.py  time.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: create_telegram_session.py
backend/tests/: conftest.py  test_api.py  test_entity_extraction.py  test_json_utils.py  test_prompts.py  test_report_generation.py
